force-app/main/default/objects/Measure__c/Measure__c.object-meta.xml
<CustomObject>
    <label>Measure</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Measure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>