force-app/main/default/objects/Measure__c/fields/eventdate__c.field-meta.xml
<CustomField>
    <fullName>eventdate__c</fullName>
    <label>eventdate</label>
    <type>DateTime</type>
</CustomField>