force-app/main/default/objects/Measure__c/fields/limitname__c.field-meta.xml
<CustomField>
    <fullName>limitname__c</fullName>
    <description>Governor Limit Name</description>
    <inlineHelpText>Governor Limit Name</inlineHelpText>
    <label>limitname</label>
    <referenceTo>MeasureConfig__c</referenceTo>
    <relationshipLabel>Measures</relationshipLabel>
    <relationshipName>MeasureConfig</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>