force-app/main/default/objects/Measure__c/fields/max_value__c.field-meta.xml
<CustomField>
    <fullName>max_value__c</fullName>
    <label>max_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>