force-app/main/default/objects/Measure__c/fields/remaining_value__c.field-meta.xml
<CustomField>
    <fullName>remaining_value__c</fullName>
    <label>remaining_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>